# dijkstra_polygon

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO
def/: irregular_1  irregular_2  mountain  unit_sq_all_q
inc/: dijkstra_polygon.hpp  dijkstra_polygon_to_string.hpp  test_data_reader.hpp  test_util.hpp
src/: dijkstra_polygon.cpp  dijkstra_polygon_to_string.cpp  test.cpp  test_data_reader.cpp  test_util.cpp  tests.cpp
test_data/: irregular_1  mountain  mountain_al  sq_in_sq  sq_in_sq_al  unit_sq_all_q  unit_sq_all_q_al  unit_sq_q1  unit_sq_q1_al
tests/: irregular_1_1  irregular_1_2  sq_in_sq  unit_sq_q1
